# arkanoid-rust

./: Cargo.toml  README.md  rustfmt.toml
arkanoid_precompile/: Cargo.toml
arkanoid_precompile/src/: bindings.rs  lib.rs
assets/prefabs/: background.ron  camera.ron  level.ron
assets/ui/: game_over_menu.ron  level_complete_menu.ron  life.ron  main_menu.ron  pause_menu.ron  score.ron
config/: bindings.ron  display.ron  frame_limiter.ron  logger.ron
lib/bundle/: Cargo.toml
lib/bundle/src/: bindings.rs  lib.rs
lib/components/: Cargo.toml
lib/components/src/: arkanoid.rs  camera.rs  prefab.rs
lib/resources/: Cargo.toml
lib/resources/src/: constants.rs  game.rs  lib.rs
lib/states/: Cargo.toml
lib/states/src/: game_over_menu.rs  gameplay.rs  level_complete_menu.rs  loading.rs  main_menu.rs  menu.rs  pause_menu.rs
lib/systems/: Cargo.toml
lib/systems/src/: ball_attraction.rs  ball_attraction_vfx.rs  block_health.rs  collision.rs  lib.rs  life.rs  move_ball.rs  move_paddle.rs  score.rs  sticky_ball.rs
precompile/: Cargo.toml
precompile/src/: lib.rs
src/: bundle.rs  main.rs
src/components/: arkanoid.rs  camera.rs  mod.rs  prefab.rs
src/resources/: game.rs  mod.rs  state.rs
src/states/: game_over_menu.rs  gameplay.rs  level_complete_menu.rs  loading.rs  main_menu.rs  menu.rs  mod.rs  pause_menu.rs
src/systems/: ball_attraction.rs  block_health.rs  collision.rs  life.rs  mod.rs  move_ball.rs  move_paddle.rs  score.rs  sticky_ball.rs
