[package]
name = "arkanoid"
version = "0.1.0"
edition = "2018"

[workspace]
members = [ "lib/*" ]

[dependencies]
bundle = { path = "lib/bundle" }
components = { path = "lib/components" }
resources = { path = "lib/resources" }
states = { path = "lib/states" }
systems = { path = "lib/systems" }
amethyst = { version = "0.15", features = ["vulkan"] }
